...

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="226dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:background="#D5D5D5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button7"
            android:layout_width="151dp"
            android:layout_height="52dp"
            android:background="#AEAEAE"
            android:onClick="validate"
            android:text="Create Account"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.685" />

        <Button
            android:id="@+id/button9"
            android:layout_width="151dp"
            android:layout_height="52dp"
            android:layout_marginBottom="52dp"
            android:background="#AEAEAE"
            android:onClick="goBack"
            android:text="Back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="214dp"
        android:layout_height="43dp"

        android:layout_marginTop="68dp"
        android:background="#AEAEAE"
        android:ems="10"
...
