...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:onClick="allItems"
            android:text="All Items"
...
            android:id="@+id/post_list"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            tools:listitem="@layout/post_list_item" />

        <Button
            android:id="@+id/button17"
            android:layout_width="125dp"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="45dp"
            android:onClick="goToHome"
            android:text="Home" />

        <Button
            android:id="@+id/button2"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
...
