...
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            app:layout_constraintVertical_bias="0.215" />

        <Button
            android:id="@+id/button3"
            android:layout_width="124dp"
            android:layout_height="47dp"
            android:background="#AEAEAE"
            android:onClick="openRegister"
            android:text="Register"
            android:textAlignment="center"
...
